--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 # DFX CANISTER ENVIRONMENT VARIABLES
 DFX_VERSION='0.20.1'
 DFX_NETWORK='local'
+CANISTER_CANDID_PATH_KONKURSSS_BACKEND='/home/wifi/konkurs/konkursss/konkurs-bootcampv2/src/konkursss_backend/konkursss_backend.did'
 CANISTER_ID_KONKURSSS_FRONTEND='a3shf-5eaaa-aaaaa-qaafa-cai'
 CANISTER_ID_KONKURSSS_BACKEND='asrmz-lmaaa-aaaaa-qaaeq-cai'
 CANISTER_ID='a3shf-5eaaa-aaaaa-qaafa-cai'
